--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ $RECYCLE.BIN/
 .TemporaryItems
 .Trashes
 .VolumeIcon.icns
+.gitignore
 
 # Directories potentially created on remote AFP share
 .AppleDB
@@ -46,5 +47,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /node_modules
+/www
 *.babelrc
 *.log
+*.gitignore
