--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "compile": "webpack"
+    "compile": "webpack",
+    "start": "npm build &&  node server.production.js",
+    "dev": "NODE_ENV=production node src/app.js",
+    "dev-watch": "webpack -d --watch && node src/app.js",
+    "build": "webpack --config ./webpack.production.config.js --progress --colors"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ranjithprabhuk/react-starter.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "react",
+    "babel",
+    "webpack",
+    "sass",
+    "react starter"
+  ],
+  "author": "Ranjithprabhu K <http://ranjithprabhu.in>",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ranjithprabhuk/react-starter/issues"
   },
@@ -28,6 +37,7 @@
     "express": "^4.15.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1"
   },
@@ -35,7 +45,9 @@
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "node-sass": "^4.5.0",
+    "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.3",
-    "style-loader": "^0.14.1"
+    "style-loader": "^0.14.1",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
