--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "webpack",
     "start": "npm build &&  node server.production.js",
-    "dev": "NODE_ENV=production node src/app.js",
-    "dev-watch": "webpack -d --watch && node src/app.js",
-    "build": "webpack --config ./webpack.production.config.js --progress --colors"
+    "dev": "webpack && node server.js",
+    "dev-watch": "webpack -d --watch && node server.js",
+    "build": "webpack --config ./webpack.production.config.js --progress --colors",
+    "test": "mocha --compilers js:babel-register --require ./test/helpers.js --require ./test/dom.js --require ignore-styles --recursive src/**/*.spec.{js,jsx}",
+    "tdd": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -42,11 +43,19 @@
     "webpack-dev-middleware": "^1.10.1"
   },
   "devDependencies": {
+    "babel-register": "^6.24.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.27.3",
+    "enzyme": "^2.7.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^9.12.0",
+    "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.3",
+    "sinon": "^2.1.0",
     "style-loader": "^0.14.1",
     "webpack-hot-middleware": "^2.17.1"
   }
