--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "webpack && node server.js",
     "build": "webpack --config ./webpack.production.config.js --progress --colors",
     "test": "mocha --compilers js:babel-register --require ./test/helpers.js --require ./test/dom.js --require ignore-styles --recursive src/**/*.spec.{js,jsx}",
-    "tdd": "npm test -- --watch"
+    "test-watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
