--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "react-router": "^4.0.0",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1"
   },
